Fix blurry Fate SRD logos

--- a/components/01-components/footer/_footer.scss
+++ b/components/01-components/footer/_footer.scss
@@ -18,7 +18,6 @@
 
   &__logo {
     display: block;
-    filter: var(--logo-shadow);
     width: 250px;
 
     @include medium {
