--- a/components/01-components/header/_header.scss
+++ b/components/01-components/header/_header.scss
@@ -58,7 +58,6 @@
 
   &__logo {
     display: block;
-    filter: var(--logo-shadow);
     width: 50vw;
 
     @include medium {
